[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/256x256 Ocean - Clouds 4.png" type="Texture" id=2]
[ext_resource path="res://assets/Ship6.png" type="Texture" id=3]
[ext_resource path="res://assets/256x256 Moon 4.png" type="Texture" id=4]
[ext_resource path="res://System.gd" type="Script" id=5]
[ext_resource path="res://PlayerShip.gd" type="Script" id=6]
[ext_resource path="res://assets/exhaust2.png" type="Texture" id=7]
[ext_resource path="res://assets/02 Space Riddle.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/exhaust4.png" type="Texture" id=9]
[ext_resource path="res://assets/flamestart.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/Fire1.wav" type="AudioStream" id=11]

[sub_resource type="Environment" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 131.004

[sub_resource type="CircleShape2D" id=3]
radius = 377.354

[sub_resource type="CircleShape2D" id=4]
radius = 31.5825

[sub_resource type="CircleShape2D" id=5]
radius = 115.233

[sub_resource type="CapsuleShape2D" id=6]
radius = 28.08
height = 58.9799

[node name="Game" type="Node2D"]

[node name="StarfieldBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="StarfieldBackground"]

[node name="TextureRect" type="TextureRect" parent="StarfieldBackground/ParallaxLayer"]
show_behind_parent = true
margin_left = -2018.08
margin_top = -1343.55
margin_right = 1906.92
margin_bottom = 1753.45
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
autoplay = true

[node name="PlanetarySystem" type="Node2D" parent="."]
script = ExtResource( 5 )
rotation_speed = -0.025

[node name="Planet" type="StaticBody2D" parent="PlanetarySystem"]

[node name="Surface" type="CollisionShape2D" parent="PlanetarySystem/Planet"]
shape = SubResource( 2 )

[node name="Image" type="Sprite" parent="PlanetarySystem/Planet"]
texture = ExtResource( 2 )

[node name="GravityWell" type="Area2D" parent="PlanetarySystem/Planet"]
space_override = 4
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 0.0
angular_damp = 0.0

[node name="Shape" type="CollisionShape2D" parent="PlanetarySystem/Planet/GravityWell"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="MoonOrbit" type="Node2D" parent="PlanetarySystem/Planet"]
position = Vector2( 450, 450 )

[node name="Moon" type="StaticBody2D" parent="PlanetarySystem/Planet/MoonOrbit"]

[node name="Surface" type="CollisionShape2D" parent="PlanetarySystem/Planet/MoonOrbit/Moon"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Image" type="Sprite" parent="PlanetarySystem/Planet/MoonOrbit/Moon"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="GravityWell" type="Area2D" parent="PlanetarySystem/Planet/MoonOrbit/Moon"]
space_override = 4
gravity_point = true
gravity_distance_scale = 1.0
gravity_vec = Vector2( 0, 0 )
gravity = 11.0
linear_damp = 0.0
angular_damp = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Shape" type="CollisionShape2D" parent="PlanetarySystem/Planet/MoonOrbit/Moon/GravityWell"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerShip" type="KinematicBody2D" parent="."]
pause_mode = 1
position = Vector2( 244.67, 227.043 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Ship" type="Sprite" parent="PlayerShip"]
texture = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="PlayerShip"]
current = true
editor_draw_drag_margin = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip"]
position = Vector2( 1.19385, -0.278198 )
rotation = 1.5708
z_index = -1
shape = SubResource( 6 )

[node name="MainEngine" type="Node2D" parent="PlayerShip"]
visible = false
position = Vector2( -37.3755, -0.33371 )

[node name="ExhaustMain1" type="Sprite" parent="PlayerShip/MainEngine"]
position = Vector2( -37.0418, -14.3495 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="ExhaustMain2" type="Sprite" parent="PlayerShip/MainEngine"]
position = Vector2( -36.3743, 11.6798 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="Sound" type="AudioStreamPlayer2D" parent="PlayerShip/MainEngine"]
position = Vector2( 37.3755, 0.33371 )
stream = ExtResource( 10 )

[node name="RetroEngine" type="Node2D" parent="PlayerShip"]
visible = false
position = Vector2( 46.7194, 0 )

[node name="Sound" type="AudioStreamPlayer2D" parent="PlayerShip/RetroEngine"]
position = Vector2( -46.7194, 0 )
stream = ExtResource( 11 )

[node name="ExhaustMain1" type="Sprite" parent="PlayerShip/RetroEngine"]
position = Vector2( 18.6875, -12.681 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="ExhaustMain2" type="Sprite" parent="PlayerShip/RetroEngine"]
position = Vector2( 19.6886, 8.67645 )
rotation = 3.14159
texture = ExtResource( 7 )

[node name="LeftRotation" type="Node2D" parent="PlayerShip"]
visible = false
position = Vector2( -0.33374, -11.3461 )

[node name="Sprite" type="Sprite" parent="PlayerShip/LeftRotation"]
position = Vector2( -19.0215, -13.3484 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="PlayerShip/LeftRotation"]
position = Vector2( 43.3822, 34.7058 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sound" type="AudioStreamPlayer2D" parent="PlayerShip/LeftRotation"]
position = Vector2( 0.33374, 11.3461 )
stream = ExtResource( 11 )

[node name="RightRotation" type="Node2D" parent="PlayerShip"]
visible = false
position = Vector2( 2.00226, 9.67758 )

[node name="Sprite" type="Sprite" parent="PlayerShip/RightRotation"]
position = Vector2( 39.3777, -36.3744 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite2" type="Sprite" parent="PlayerShip/RightRotation"]
position = Vector2( -21.6913, 12.6809 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sound" type="AudioStreamPlayer2D" parent="PlayerShip/RightRotation"]
position = Vector2( -2.00226, -9.67758 )
stream = ExtResource( 11 )
